--- a/field.tex
+++ b/field.tex
@@ -59,7 +59,7 @@ Izquierdo et. al. reported discrepant results comparing vertical approaching cur
 In another works, Mg$^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
 On the other hand, pMg values fallen below the lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
 
-These phenomenon could be explained by a contribution of the electric field to the measured potential. The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode:
+These phenomenon could be explained by a contribution of the electric field to the measured potential. As it is well-known, the corrosion current within the metallic phase carried by electrons, causes negligible ohmic potential differences, because of the high conductivity. However, the current in the aqueous phase associated with potential differences \cite{Isaacsfield}. The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. This phenomenon is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arise from ionic currents in the solution\cite{SVET}. In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution two the potentiometric signal. The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode:
 
 \begin{equation}
 \Delta E=E_M-E_R + (\phi_M - \phi_R)
@@ -74,14 +74,7 @@ E_M = S \times lg[Mg^{2+}] + E_M^o
 \end{equation}
 
 where $S$ is the slope of the calibration curve of the potentiometric cell with respect to the primary ion, and $E_M^o$ is the standard potential.
-
-\begin{figure}
-\centering
-% trim = top left bottom right
-\includegraphics[width=0.5\textwidth]{abstract.eps}
-\caption{Caption.}
-\label{fig:abstract}
-\end{figure}
+Since one expects that the potential measured by the ISMEs is solely determined by activity of the primary ions, and the aim of the experiments to obtain quantitatively reliably concentration distributions the additional contributions to the analytical signal have to be revealed.
 
 The effect of the electric field on the measured potential difference has been investigated in this paper. The galvanic corrosion of the AZ63 Mg-Al alloy and iron was used as a model system.
 
@@ -201,6 +194,13 @@ Current microscopy contributions to advances in science and technology. Spain: F
 Development of $Mg^{2+}$ Ion-Selective Microelectrodes for Potentiometric Scanning Electrochemical Microscopy Monitoring of Galvanic Corrosion Processes
 Journal of the Electrochemical Society  160 (2013) 451-459. 
 \bibitem{belowmg}J. Izquierdo, B. M. Fernández-Pérez, D. Filotás, Z. Őri, A. Kiss, R.T. Martín-Gómez, L. Nagy, G. Nagy, R. M. Souto Imaging of Concentration Distributions and Hydrogen Evolution on Corroding Magnesium Exposed to Aqueous Environments Using Scanning Electrochemical Microscopy Electroanalysis 28 (2016) 1–14.
+\bibitem{Isaacsfield}H. S. Isaacs, B. Vyas Scanning reference electrode techniques in localized corrosion, in: F. Mansfeld, U. Bertocci (Eds.), Electrochemical Corrosion Testing, ASTM STP 727, American Society for Testing and Materials, 1981, p. 31.
+\bibitem{SRET1}H.N. McMurray, S.R. Magill, B.D. Jeffs, Scanning reference electrode technique as tool for investigating localised corrosion phenomena in galvanised steels, Ironmak. Steelmak. 23 (1996) 183–188.
+\bibitem{SRET2}V.S. Voruganti, H.B. Luft, D. DeGeer, S.A. Bradford, Scanning reference electrode technique for the investigation of preferential corrosion of weldments in offshore applications, Corrosion 47 (1991) 343–351.
+\bibitem{SRET3}H.S. Isaacs, G. Kissel, Surface preparation and pit propagation in stainless steels, J. Electrochem. Soc. 119 (1972) 1628–1632.
+\bibitem{SRET4}N. Hsu, J.D. Garber, R. Brunel, R.D. Braun, A scanning reference electrode for use during corrosive measurements, Corrosion 43 (1987) 606–610.
+\bibitem{SRET5}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.   
+
 
 \end{thebibliography}
 
