--- a/field.tex
+++ b/field.tex
@@ -66,7 +66,7 @@ These phenomenon could be explained by a contribution of the electric field to t
 \label{eq:potential}
 \end{equation}
 
-where $\Delta E$ is the measured potential difference, $E_R$ is the potential of the reference electrode, $\phi_M$ and $\phi_R$ are the potentials in the electric field at the measuring and reference electrodes, respectively. $E_M$ is the potential of the measuring electrode:
+where $\Delta E$ is the measured potential difference, $E_R$ is the potential of the reference electrode, $\phi_M$ and $\phi_R$ are the potentials in the electric field at the measuring and reference electrodes, respectively. $E_M$ is the potential of the measuring electrode selective for e.g. $Mg^{2+}$:
 
 \begin{equation}
 E_M = S \times lg[Mg^{2+}] + E_M^o
