--- a/field.tex
+++ b/field.tex
@@ -59,7 +59,12 @@ Izquierdo et. al. reported discrepant results comparing vertical approaching cur
 In another works, Mg$^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
 On the other hand, pMg values fallen below the lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
 
-These phenomenon could be explained by a contribution of the electric field to the measured potential. As it is well-known, the corrosion current within the metallic phase carried by electrons, causes negligible ohmic potential differences, because of the high conductivity. However, the current in the aqueous phase associated with potential differences \cite{Isaacsfield}. The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. This phenomenon is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arise from ionic currents in the solution\cite{SVET}. In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution two the potentiometric signal. The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode:
+These phenomenon could be explained by a contribution of the electric field to the measured potential. As it is well-known, the corrosion current within the metallic phase carried by electrons, causes negligible ohmic potential differences, because of the high conductivity. However, the current in the aqueous phase associated with potential differences \cite{Isaacsfield}. 
+The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. 
+This phenomenon is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. 
+The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arise from ionic currents in the solution\cite{SVET}. 
+In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution two the potentiometric signal. 
+The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode:
 
 \begin{equation}
 \Delta E=E_M-E_R + (\phi_M - \phi_R)
@@ -80,12 +85,12 @@ The effect of the electric field on the measured potential difference has been i
 
 \section{Material and methods}
 
-The preparation of solid contanct $Mg^{2+}$ selective microelectrodes was adopted from a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was frontfilled with the cocktail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
+The preparation of solid contanct $Mg^{2+}$ selective microelectrodes is described in details in a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was frontfilled with the cocktail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
 The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted MgCl$_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is -29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. 
 
 The (Mg/Al)/Fe galvanic couple target was prepared from the AZ63 Mg/Al alloy and high purity Fe wires with an identical diameter of 0.76 mm. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark)., exposing only the disk shaped surfaces and allowing to make electric contact at the rear of the mould. Frontal surface of the mould was first polished with SiC paper down to 4000 grit, then with 1.0, 0.3 $\upmu$m alumina powder.
 
-SECM experiments were carried out employing homemade instrument operated with custom software. The sample was placed at the bottom of the electrochemical cell, whereas the local potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB(eDAQ Pty Ltd, Australia).
+SECM experiments were carried out using a homemade instrument operated with custom software. The sample was placed at the bottom of the electrochemical cell, while the potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB(eDAQ Pty Ltd, Australia).
 
 \section{Results and discussion}
 
