--- a/field.tex
+++ b/field.tex
@@ -182,7 +182,7 @@ Based on the results of this work, this influence should be negated by bringing 
 \bibitem{diamondel}E.L. Silva, A.C. Bastos, M.A. Neto, R.F. Silva, M.G.S. Ferreira, M.L. Zheludkevich, F.J. Oliveira Novel diamond microelectrode for pH sensing Electrochemistry Communications 40 (2014) 31–34.
 \bibitem{cutedge}A. Alvarez-Pampliega, S.V. Lamaka, M.G. Taryba, M. Madani, J. De Strycker, E. Tourwé, M.G.S. Ferreira, H. Terryn Cut-edge corrosion study on painted aluminum rich metallic coated steel by scanning vibrating electrode and micro-potentiometric techniques Electrochimica Acta 61 (2012) 107–117.	
 \bibitem{H+selective}E. A. Zdrachek. A. G. Karotkaya, V. A. Nazarov,K. A. Andronchyk, L. S. Stanishevskii, V. V. Egorov, M. G. Taryba, D. Snihirova, M. Kopylovich, S. V. Lamaka $H^{+}$-selective microelectrodes with optimized measuring range for corrosion studies  Sensors and Actuators B 207 (2015) 967–975.
-\bibitem{simulating}H. Shi, Z. Tian, T. Hu, F. Liu, E. H. Han, M. Taryba, S.V. Lamaka Simulating corrosion of Al2CuMg phase by measuring ionic currents, chloride concentration and pH Corrosion Science 88 (2014) 178–186.
+\bibitem{simulating}H. Shi, Z. Tian, T. Hu, F. Liu, E. H. Han, M. Taryba, S.V. Lamaka Simulating corrosion of Al_{2}CuMg phase by measuring ionic currents, chloride concentration and pH Corrosion Science 88 (2014) 178–186.
 \bibitem{amperopot}J. Izquierdo, L. Nagy, J. J. Santana, G. Nagy, R. M. Souto A novel microelectrochemical strategy for the study of corrosion inhibitors employing the scanning vibrating electrode technique and dual potentiometric/amperometric operation in scanning electrochemical microscopy: Application to the study of the cathodic inhibition by benzotriazole of the galvanic corrosion of copper coupled to iron Electrochimica Acta 58 (2011) 707–716.
 \bibitem{chloride}V. A. Nazarov, M. G. Taryba, E. A. Zdrachek, K. A. Andronchyk, V. V. Egorov, S. V. Lamaka Sodium- and chloride-selective microelectrodes optimized for corrosion studies Journal of Electroanalytical Chemistry 706 (2013) 13–24.
 \bibitem{spatiozn}E. Tada, S. Satoh, H. Kaneko,The spatial distribution of $Zn^{2+}$ during galvanic corrosion of a Zn/steel couple Electrochimica Acta 49 (2004) 2279–2285.
