--- a/field.tex
+++ b/field.tex
@@ -62,7 +62,7 @@ On the other hand, pMg values fallen below the lower limit of detection of Mg IS
 These phenomenon could be explained by a contribution of the electric field to the measured potential. As it is well-known, the corrosion current within the metallic phase carried by electrons, causes negligible ohmic potential differences, because of the high conductivity. However, the current in the aqueous phase associated with potential differences \cite{Isaacsfield}. 
 The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. 
 This phenomenon is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. 
-The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arise from ionic currents in the solution\cite{SVET}. 
+The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arise from ionic currents in the solution \cite{SVET}. 
 In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution two the potentiometric signal. 
 The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode:
 
@@ -204,7 +204,7 @@ Journal of the Electrochemical Society  160 (2013) 451-459.
 \bibitem{SRET2}V.S. Voruganti, H.B. Luft, D. DeGeer, S.A. Bradford, Scanning reference electrode technique for the investigation of preferential corrosion of weldments in offshore applications, Corrosion 47 (1991) 343–351.
 \bibitem{SRET3}H.S. Isaacs, G. Kissel, Surface preparation and pit propagation in stainless steels, J. Electrochem. Soc. 119 (1972) 1628–1632.
 \bibitem{SRET4}N. Hsu, J.D. Garber, R. Brunel, R.D. Braun, A scanning reference electrode for use during corrosive measurements, Corrosion 43 (1987) 606–610.
-\bibitem{SRET5}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.   
+\bibitem{SVET}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.   
 
 
 \end{thebibliography}
