--- a/field.tex
+++ b/field.tex
@@ -96,8 +96,6 @@ SECM experiments were carried out using a homemade instrument operated with cust
 
 Consecutive approaching curves were recorded above the corroding AZ63 sample (fig. \ref{fig:approach}A). The first 6 were taken while the AZ63 sample was not coupled to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased as a result of homogeneous corrosion. The overall change was about 10 mV in 5 minutes. Then, the two metals were coupled at the rear end of the mould. The moment the galvanic connection was established, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from the red to the blue curves). This cannot possibly be attributed to the increase of Mg$^{2+}$ activity that far from the source, since the coupling was established when the scanning tip was 1000 $\upmu$m from the AZ63 sample. Also, a 40 mV rise would mean an increase of about 1.5 orders of magnitude in Mg$^{2+}$ activity in less then a second. Then, six additional approaching curves were recorded during the galvanic coupling. The accelerated dissolution of Mg$^{2+}$ can be seen in fig. \ref{fig:approach}A (blue curves). Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noise. During this period, the potential at h = 1000 $\upmu$m increased by about 40 mV. This rise can be completely attributed to the increase in activity: $\Delta E = 29.5 mV \times lg[$Mg$^{2+}]$. Lastly, the galvanic connection was severed, and 2 more approaching curves were measured (green curves). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the frst few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square root of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
 
-Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was maniulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ of more than two orders of magnitude is possible 100 $\upmu$m away the source, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
-
 \begin{figure}
 \centering
 \begin{tikzpicture}
@@ -146,6 +144,10 @@ Next, the potential was recorded at a constant height as a function of time, whi
 \caption{Caption.}
 \label{fig:approach}
 \end{figure}
+
+
+
+Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was maniulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
 
 
 
