maniulated->manipulated + 2D scans

--- a/field.tex
+++ b/field.tex
@@ -147,10 +147,10 @@ Consecutive approaching curves were recorded above the corroding AZ63 sample (fi
 
 
 
-Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was maniulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
-
-
-
+Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was manipulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
+Finally, in order to demonstrate the influece of the electric field on the SECM measurements 2D images were recorded at constant 100 $\upmu$m tip-sample disctance after 30 minutes coupling. 
+Then the galvanic connection was severed and immediately another 2D scan was performed above the Mg disk. The two images can be seen in \ref{fig:2d}. Apparently, in case of galvanic coupling 0.1 M Mg$^{2+}$ activity can be detected even the bulk of solution, whereas above the center of the disk the activity approaches the implausible 10$^{4}$ M value using the calibration curve for calculation.   
+In \ref{fig:2d}B the measured values are in the linear range of the ISME and total change is orders of magnitude less than in  \ref{fig:2d}A. It has to be mentioned, that during the second scan the lack of electric connection of the galvanic couple and the diffusion of the Mg2+ ions can introduce incertainities in the evaluation of the image, yet does not lead to such impossible misinterpretation as \ref{fig:2d}A.
 
 
 \def\s{0.35}
