--- a/field.tex
+++ b/field.tex
@@ -59,6 +59,15 @@ Izquierdo et. al. reported discrepant results comparing vertical approaching cur
 In another works, Mg$^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
 On the other hand, pMg values fallen below the lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
 
+\begin{figure}
+\centering
+% trim = top left bottom right
+\includegraphics[width=0.4\textwidth]{abstract.eps}
+\caption{Caption.}
+\label{fig:abstract}
+\end{figure}
+
+
 These phenomenon could be explained by a contribution of the electric field to the measured potential. As it is well-known, the corrosion current within the metallic phase carried by electrons, causes negligible ohmic potential differences, because of the high conductivity. However, the current in the aqueous phase associated with potential differences \cite{Isaacsfield}. 
 The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. 
 This phenomena is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. 
