square root -> square

--- a/field.tex
+++ b/field.tex
@@ -103,7 +103,7 @@ SECM experiments were carried out using a homemade instrument operated with cust
 
 \section{Results and discussion}
 
-Consecutive approaching curves were recorded above the corroding AZ63 sample (fig. \ref{fig:approach}A). The first 6 were taken while the AZ63 sample was not coupled to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased as a result of homogeneous corrosion. The overall change was about 10 mV in 5 minutes. Then, the two metals were coupled at the rear end of the mould. The moment the galvanic connection was established, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from the red to the blue curves). This cannot possibly be attributed to the increase of Mg$^{2+}$ activity that far from the source, since the coupling was established when the scanning tip was 1000 $\upmu$m from the AZ63 sample. Also, a 40 mV rise would mean an increase of about 1.5 orders of magnitude in Mg$^{2+}$ activity in less then a second. Then, without pause, six additional approaching curves were recorded during the galvanic coupling. The accelerated dissolution of Mg$^{2+}$ can be seen in fig. \ref{fig:approach}A (blue curves). Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noise. During this period, the potential at h = 1000 $\upmu$m increased by about 40 mV. This rise can be completely attributed to the increase in activity: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Lastly, the galvanic connection was severed, and 2 more approaching curves were measured (green curves). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the frst few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square root of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
+Consecutive approaching curves were recorded above the corroding AZ63 sample (fig. \ref{fig:approach}A). The first 6 were taken while the AZ63 sample was not coupled to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased as a result of homogeneous corrosion. The overall change was about 10 mV in 5 minutes. Then, the two metals were coupled at the rear end of the mould. The moment the galvanic connection was established, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from the red to the blue curves). This cannot possibly be attributed to the increase of Mg$^{2+}$ activity that far from the source, since the coupling was established when the scanning tip was 1000 $\upmu$m from the AZ63 sample. Also, a 40 mV rise would mean an increase of about 1.5 orders of magnitude in Mg$^{2+}$ activity in less then a second. Then, without pause, six additional approaching curves were recorded during the galvanic coupling. The accelerated dissolution of Mg$^{2+}$ can be seen in fig. \ref{fig:approach}A (blue curves). Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noise. During this period, the potential at h = 1000 $\upmu$m increased by about 40 mV. This rise can be completely attributed to the increase in activity: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Lastly, the galvanic connection was severed, and 2 more approaching curves were measured (green curves). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the frst few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
 
 \begin{figure}
 \centering
