--- a/field.tex
+++ b/field.tex
@@ -72,7 +72,7 @@ These phenomena could be explained by a contribution of the electric field to th
 The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. 
 This phenomenon is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. 
 The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arisen from ionic currents in the solution \cite{SVET}. 
-In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution two the potentiometric signal. 
+In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution to the potentiometric signal. 
 The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode (fig. \ref{fig:abstract}):
 
 \begin{equation}
