--- a/field.tex
+++ b/field.tex
@@ -126,6 +126,9 @@ Consecutive approaching curves were recorded above the corroding AZ63 sample (fi
 \addplot [domain=0:1000, color=green, densely dashdotted] table {15.txt};
 \node[anchor=north east] at (rel axis cs:0.98,0.98) {A};
 
+\draw [black, ->] (axis cs:900,-0.05) -- (axis cs:900,-0.025);
+\node[black, left] at (axis cs:900,-0.0375) {$\Delta$E$_1$};
+
 
 %\node[black, above left] at (axis cs:0,-290) {pH 4};
 %\node[black, above right] at (axis cs:0,-290) {pH 6};
