--- a/field.tex
+++ b/field.tex
@@ -88,22 +88,22 @@ E_M = S \times lg[Mg^{2+}] + E_M^o
 \end{equation}
 
 where $S$ is the slope of the calibration curve of the potentiometric cell with respect to the primary ion, and $E_M^o$ is the standard potential.
-Since one expects that the potential measured by the ISMEs is solely determined by activity of the primary ions, and the aim of the experiments to obtain quantitatively reliably concentration distributions the additional contributions to the analytical signal have to be revealed.
+Since one expects that the potential measured by the ISMEs is solely determined by the activity of the primary ions, and the aim of the experiments to obtain quantitatively reliably concentration distributions the additional contributions to the analytical signal have to be revealed.
 
 The effect of the electric field on the measured potential difference has been investigated in this paper. The galvanic corrosion of the AZ63 Mg-Al alloy and iron was used as a model system.
 
 \section{Material and methods}
 
-The preparation of solid contanct $Mg^{2+}$ selective microelectrodes is described in details in a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was frontfilled with the cocktail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
-The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted MgCl$_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is E = -29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. 
+The preparation of solid contanct $Mg^{2+}$ selective microelectrodes is described in details in a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was frontfilled with the cocktail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
+The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted MgCl$_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. 
 
 The (Mg/Al)/Fe galvanic couple target was prepared from the AZ63 Mg/Al alloy and high purity Fe wires with an identical diameter of 0.76 mm. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark)., exposing only the disk shaped surfaces and allowing to make electric contact at the rear of the mould. Frontal surface of the mould was first polished with SiC paper down to 4000 grit, then with 1.0, 0.3 $\upmu$m alumina powder.
 
-SECM experiments were carried out using a homemade instrument operated with custom software. The sample was placed at the bottom of the electrochemical cell, while the potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia).
+SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia).
 
 \section{Results and discussion}
 
-Consecutive approaching curves were recorded above the corroding AZ63 sample (fig. \ref{fig:approach}A). The first 6 were taken while the AZ63 sample was not coupled to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased as a result of homogeneous corrosion. The overall change was about 10 mV in 5 minutes. Then, the two metals were coupled at the rear end of the mould. The moment the galvanic connection was established, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from the red to the blue curves). This cannot possibly be attributed to the increase of Mg$^{2+}$ activity that far from the source, since the coupling was established when the scanning tip was 1000 $\upmu$m from the AZ63 sample. Also, a 40 mV rise would mean an increase of about 1.5 orders of magnitude in Mg$^{2+}$ activity in less then a second. Then, without pause, six additional approaching curves were recorded during the galvanic coupling. The accelerated dissolution of Mg$^{2+}$ can be seen in fig. \ref{fig:approach}A (blue curves). Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noise. During this period, the potential at h = 1000 $\upmu$m increased by about 40 mV. This rise can be completely attributed to the increase in activity: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Lastly, the galvanic connection was severed, and 2 more approaching curves were measured (green curves). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the frst few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
+Consecutive approaching curves were recorded above the corroding AZ63 sample (fig. \ref{fig:approach}A). The first 6 were taken while the AZ63 sample was not coupled to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased as a result of homogeneous corrosion. The overall change was about 10 mV in 5 minutes. Then, the two metals were coupled at the rear end of the mould. The moment the galvanic connection was established, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from the red to the blue curves). This cannot possibly be attributed to the increase of Mg$^{2+}$ activity that far from the source, since the coupling was established when the scanning tip was 1000 $\upmu$m from the AZ63 sample. Also, a 40 mV rise would mean an increase of about 1.5 orders of magnitude in Mg$^{2+}$ activity in less then a second. Then, without pause, six additional approaching curves were recorded during the galvanic coupling. The accelerated dissolution of Mg$^{2+}$ can be seen in fig. \ref{fig:approach}A (blue curves). Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noise. During this period, the potential at h = 1000 $\upmu$m increased by about 40 mV. This rise can be completely attributed to the increase in activity: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Lastly, the galvanic connection was severed, and 2 more approaching curves were measured (green curves). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the first few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
 
 \begin{figure}
 \centering
@@ -164,10 +164,10 @@ Consecutive approaching curves were recorded above the corroding AZ63 sample (fi
 
 
 
-Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was manipulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
+Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was manipulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
 
-Finally, in order to demonstrate the influece of the electric field on the SECM measurements 2D images were recorded at constant 100 $\upmu$m tip-sample disctance after 30 minutes coupling. 
-Then the galvanic connection was severed and immediately another 2D scan was performed above the Mg disk. The two images can be seen in \ref{fig:2d}. Apparently, in case of galvanic coupling 0.1 M Mg$^{2+}$ activity can be detected even the bulk of solution, whereas above the center of the disk the activity approaches the implausible 10$^{4}$ M value using the calibration curve for calculation.   
+Finally, in order to demonstrate the influence of the electric field on the SECM measurements 2D images were recorded at constant 100 $\upmu$m tip-sample disctance after 30 minutes coupling. 
+Then the galvanic connection was severed and immediately another 2D scan was performed above the Mg disk. The two images can be seen in \ref{fig:2d}. Apparently, in case of galvanic coupling 0.1 M Mg$^{2+}$ activity can be detected even in the bulk of the solution, whereas above the center of the disk the activity approaches the implausible 10$^{4}$ M value using the calibration curve for calculation.   
 In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME and total change is orders of magnitude less than in fig. \ref{fig:2d}A. It has to be mentioned, that during the second scan the lack of electric connection of the galvanic couple and the diffusion of the Mg$^{2+}$ ions can introduce incertainities in the evaluation of the image, yet does not lead to such impossible misinterpretation as fig. \ref{fig:2d}A.
 
 
