added Ricardo as co-author

--- a/field.tex
+++ b/field.tex
@@ -23,10 +23,13 @@
 \cortext[cor]{Corresponding author}
 \author[akiss]{András Kiss\corref{cor}}
 \address[akiss, gnagy]{Department of General and Physical Chemistry, Faculty of Sciences, University of Pécs, 7624 Pécs, Ifjúság útja 6, Hungary}
+\address[rmsouto]{Department Chemistry, Universidad de La Laguna, P.O. Box 456, E-38200 La Laguna (Tenerife), Spain}
 %\address[akiss, gnagy]{János Szentágothai Research Centre, University of Pécs, 7624 Pécs, Ifjúság Útja 20, Hungary}
 \ead{akiss@gamma.ttk.pte.hu}
 \author[dfilotas]{Dániel Filotás}
 \ead{filotasdaniel@gmail.com}
+\author[rmsouto]{Ricardo M. Souto}
+\ead{rsouto@ull.es}
 \author[gnagy]{Géza Nagy}
 \ead{g-nagy@gamma.ttk.pte.hu}
 
